# at3_group_9

./: Makefile  README.md  pyproject.toml
docs/: Makefile  conf.py  index.rst  make.bat
models/: model_gb_boost.joblib  model_gb_boost_srusti.joblib  scaler.joblib
notebooks/: 1.data_merge.ipynb  2.data_preprocessing.ipynb  3.linear_model.ipynb  4.dt_model.ipynb  5.sgd_model.ipynb  AT3.ipynb  AT3_data_prep.ipynb  EDA_streamlit.ipynb  Pattnayak_Srusti_14348421_Gradient_boost.ipynb  Satrulee_marisara-24710081-GradientBoostingRegressor.ipynb  Satrulee_marisara-24710081-KNeighborsRegressor.ipynb  Satrulee_marisara-24710081_KNeighborsRegressor.ipynb  Sukjaroen_sudarat-24667255_DecisionTree.ipynb  chingpayakmon_narongvat-14229898-Model.ipynb  file_merge_srusti.ipynb  file_prep.py  flight_fare_app.py  flight_fare_page.py  model_srusti.ipynb  testing.ipynb
src/data/: data_prep.py
src/models/: predict_model.py
streamlit/: app.py
table/: table.csv
